--- a/template.yml
+++ b/template.yml
@@ -12,8 +12,11 @@ Parameters:
     Description: IAM role to allow AWS CodeDeploy to manage deployment of AWS Lambda functions
   Stage:
     Type: String
+    AllowedValues:
+      - dev
+      - prod
     Description: The name for a project pipeline stage, such as Staging or Prod, for which resources are provisioned and deployed.
-    Default: ''
+    Default: 'dev'
 
 Globals:
   Function:
@@ -24,10 +27,10 @@ Globals:
       Role: !Ref CodeDeployRole
 
 Resources:
-  HelloWorld:
+  Growthchart:
     Type: AWS::Serverless::Function
     Properties:
-      FunctionName: !Sub 'awscodestar-${ProjectId}-lambda-HelloWorld'
+      FunctionName: !Sub 'awscodestar-${ProjectId}-lambda-Growthchart'
       Handler: index.handler
       Runtime: nodejs12.x
       Environment:
