--- a/template.yml
+++ b/template.yml
@@ -55,7 +55,7 @@ Resources:
     Description: Creating service role in IAM for AWS Lambda
     Type: AWS::IAM::Role
     Properties:
-      RoleName: !Sub 'CodeStar-${ProjectId}-Execution${Stage}'
+      RoleName: !Sub 'CodeStar-${ProjectId}-Execution'
       AssumeRolePolicyDocument:
         Statement:
         - Effect: Allow
