--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "express": "4.16.2"
     },
     "devDependencies": {
+        "aws-sdk": "^2.376.0",
         "mocha": "5.0.0",
         "unit.js": "2.0.0",
         "supertest": "3.0.0"
