--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dependencies": {
         "aws-serverless-express": "3.1.3",
         "body-parser": "^1.19.0",
-        "express": "4.16.2"
+        "express": "4.16.2",
+        "winston": "^3.3.3"
     },
     "devDependencies": {
         "aws-sdk": "^2.376.0",
